--- a/app/views/games/new.html.erb
+++ b/app/views/games/new.html.erb
@@ -2,17 +2,19 @@
   <br />
   <div class="booyah-box col-6 offset-3 color-choice">
     <h1 class="text-center" id='about-header'>Start a New Game</h1>
-    <br /><br />
+    <br />
+    <%= simple_form_for @game do |f| %>
+        <%= f.input :name, label: 'Name Your Game', class: "name-your-game" %>
+    <% end %>
+    <br />
       <div class = "row">
-        <div class = "xyz">
+        <div class = "xyz text-center">
           <h5>I would like to be...</h5>
           <div class="row">
             <%= simple_form_for @game do |f| %>
-            
               <%= f.input :white_player_user_id, as: :hidden, :input_html => { :value => current_user.id } %>
               <%= f.input :turn_user_id, as: :hidden, :input_html => { :value => current_user.id } %>
               <%= f.submit "", :type => :image, :src => image_path("whiteKing.png"), class: "player-button" %>
-
             <% end %>
             <%= simple_form_for @game do |f| %>
               <%= f.input :black_player_user_id, as: :hidden, :input_html => { :value => current_user.id } %>
