--- a/app/assets/stylesheets/games.scss
+++ b/app/assets/stylesheets/games.scss
@@ -15,6 +15,8 @@
 
 .captured-pieces {
   height: 600px;
+  padding: 0px;
+  margin: 0px;
 }
 
 .chatbox {
@@ -89,6 +91,12 @@ td {
   height: 80px;
   width: 80px;
   display:block;
+}
+
+.piece_cap {
+  width: 70px;
+  height: 70px;
+  opacity: 1;
 }
 
 /* ------------------------ */
