--- a/app/views/games/show.html.erb
+++ b/app/views/games/show.html.erb
@@ -81,45 +81,50 @@
 
   <div class="column">
     <div class="booyah-box captured-pieces">
-      <div class="white_captured_pieces">
-        <% @game.pieces.where(captured: true, white: true).each do |piece| %>
-          <div class= data-piece-url="<%= piece_path(piece) %>">
-            <% case piece.type %>
-              <% when "Pawn" %>
-                <%= image_tag "Pawn_white.png", :class => "piece_cap" %>
-              <% when "Rook" %>
-                <%= image_tag "Rook_white.png", :class => "piece_cap" %>
-              <% when "Knight" %>
-                <%= image_tag "Knight_white.png", :class => "piece_cap" %>
-              <% when "Bishop" %>
-                <%= image_tag "Bishop_white.png", :class => "piece_cap" %>
-              <% when "Queen" %>
-                <%= image_tag "Queen_white.png", :class => "piece_cap" %>
-              <% when "King" %>
-                <%= image_tag "King_white.png", :class => "piece_cap" %>
-            <% end %>
-          </div>
-        <% end %>
+      <div class="booyah-box white_captured_pieces">
+        <span id="white_captured">
+          <% @game.pieces.where(captured: true, white: true).each do |piece| %>
+            <div class= data-piece-url="<%= piece_path(piece) %>">
+              <% case piece.type %>
+                <% when "Pawn" %>
+                  <%= image_tag "Pawn_white.png", :class => "piece_cap" %>
+                <% when "Rook" %>
+                  <%= image_tag "Rook_white.png", :class => "piece_cap" %>
+                <% when "Knight" %>
+                  <%= image_tag "Knight_white.png", :class => "piece_cap" %>
+                <% when "Bishop" %>
+                  <%= image_tag "Bishop_white.png", :class => "piece_cap" %>
+                <% when "Queen" %>
+                  <%= image_tag "Queen_white.png", :class => "piece_cap" %>
+                <% when "King" %>
+                  <%= image_tag "King_white.png", :class => "piece_cap" %>
+              <% end %>
+            </div>
+          <% end %>
+        </span>
+      </div>
       <br />
-      <div class="black_captured_pieces">
-        <% @game.pieces.where(captured: true, white: false).each do |piece| %>
-          <div class= data-piece-url="<%= piece_path(piece) %>">
-            <% case piece.type %>
-              <% when "Pawn" %>
-                <%= image_tag "Pawn_black.png", :class => "piece_cap" %>
-              <% when "Rook" %>
-                <%= image_tag "Rook_black.png", :class => "piece_cap" %>
-              <% when "Knight" %>
-                <%= image_tag "Knight_black.png", :class => "piece_cap" %>
-              <% when "Bishop" %>
-                <%= image_tag "Bishop_black.png", :class => "piece_cap" %>
-              <% when "Queen" %>
-                <%= image_tag "Queen_black.png", :class => "piece_cap" %>
-              <% when "King" %>
-                <%= image_tag "King_black.png", :class => "piece_cap" %>
-            <% end %>
-          </div>
-        <% end %>
+      <div class="booyah-box black_captured_pieces">
+        <span id="black_captured">
+          <% @game.pieces.where(captured: true, white: false).each do |piece| %>
+            <div class= data-piece-url="<%= piece_path(piece) %>">
+              <% case piece.type %>
+                <% when "Pawn" %>
+                  <%= image_tag "Pawn_black.png", :class => "piece_cap" %>
+                <% when "Rook" %>
+                  <%= image_tag "Rook_black.png", :class => "piece_cap" %>
+                <% when "Knight" %>
+                  <%= image_tag "Knight_black.png", :class => "piece_cap" %>
+                <% when "Bishop" %>
+                  <%= image_tag "Bishop_black.png", :class => "piece_cap" %>
+                <% when "Queen" %>
+                  <%= image_tag "Queen_black.png", :class => "piece_cap" %>
+                <% when "King" %>
+                  <%= image_tag "King_black.png", :class => "piece_cap" %>
+              <% end %>
+            </div>
+          <% end %>
+        </span>
       </div>
     </div>
     <% if @game.users.count > 1 %>
