--- a/app/views/games/show.html.erb
+++ b/app/views/games/show.html.erb
@@ -79,64 +79,40 @@
   </div>
 
 
-  <div class="column">
-    <div class="booyah-box captured-pieces">
-      <div class="booyah-box white_captured_pieces">
-        <span id="white_captured">
-          <% @game.pieces.where(captured: true, white: true).each do |piece| %>
-            <div class= data-piece-url="<%= piece_path(piece) %>">
-              <% case piece.type %>
-                <% when "Pawn" %>
-                  <%= image_tag "Pawn_white.png", :class => "piece_cap" %>
-                <% when "Rook" %>
-                  <%= image_tag "Rook_white.png", :class => "piece_cap" %>
-                <% when "Knight" %>
-                  <%= image_tag "Knight_white.png", :class => "piece_cap" %>
-                <% when "Bishop" %>
-                  <%= image_tag "Bishop_white.png", :class => "piece_cap" %>
-                <% when "Queen" %>
-                  <%= image_tag "Queen_white.png", :class => "piece_cap" %>
-                <% when "King" %>
-                  <%= image_tag "King_white.png", :class => "piece_cap" %>
-              <% end %>
-            </div>
-          <% end %>
-        </span>
+  <div class="row">
+    <div class="column">
+      <div class="booyah-box captured-pieces">
+        <div class="booyah-box white_captured_pieces">
+          <span id="white_captured">
+            <h5>White Captured Pieces</h5>
+            <% @game.pieces.where(captured: true, white: true).each do |piece| %>
+              <%= image_tag piece.image, :class => "piece_cap" %>
+            <% end %>
+          </span>
+        </div>
+        <br />
+        <div class="booyah-box black_captured_pieces">
+          <span id="black_captured">
+            <h5>Black Captured Pieces</h5>
+            <% @game.pieces.where(captured: true, white: false).each do |piece| %>
+              <%= image_tag piece.image, :class => "piece_cap" %>
+            <% end %>
+          </span>
+        </div>
       </div>
-      <br />
-      <div class="booyah-box black_captured_pieces">
-        <span id="black_captured">
-          <% @game.pieces.where(captured: true, white: false).each do |piece| %>
-            <div class= data-piece-url="<%= piece_path(piece) %>">
-              <% case piece.type %>
-                <% when "Pawn" %>
-                  <%= image_tag "Pawn_black.png", :class => "piece_cap" %>
-                <% when "Rook" %>
-                  <%= image_tag "Rook_black.png", :class => "piece_cap" %>
-                <% when "Knight" %>
-                  <%= image_tag "Knight_black.png", :class => "piece_cap" %>
-                <% when "Bishop" %>
-                  <%= image_tag "Bishop_black.png", :class => "piece_cap" %>
-                <% when "Queen" %>
-                  <%= image_tag "Queen_black.png", :class => "piece_cap" %>
-                <% when "King" %>
-                  <%= image_tag "King_black.png", :class => "piece_cap" %>
-              <% end %>
-            </div>
+      <% if @game.users.count > 1 %>
+        <%= simple_form_for @game, url: forfeit_game_path(@game) do |f| %>
+          <% if current_user.id == @game.white_player %>
+            <%= f.input :winner_user_id, as: :hidden, :input_html => { :value => @game.black_player.id } %>
+          <% else %>
+            <%= f.input :winner_user_id, as: :hidden, :input_html => { :value => @game.white_player.id } %>
           <% end %>
-        </span>
-      </div>
-    </div>
-    <% if @game.users.count > 1 %>
-      <%= simple_form_for @game, url: forfeit_game_path(@game) do |f| %>
-        <% if current_user.id == @game.white_player %>
-          <%= f.input :winner_user_id, as: :hidden, :input_html => { :value => @game.black_player.id } %>
-        <% else %>
-          <%= f.input :winner_user_id, as: :hidden, :input_html => { :value => @game.white_player.id } %>
+          <span class="float-right"><%= f.submit "Forfeit", class: "btn btn-danger btn-lg" %></span>
         <% end %>
-        <span class="float-right"><%= f.submit "Forfeit", class: "btn btn-danger btn-lg" %></span>
       <% end %>
-    <% end %>
+      </div>
     </div>
   </div>
-</div>
+
+
+
