--- a/app/assets/stylesheets/master.scss
+++ b/app/assets/stylesheets/master.scss
@@ -4,7 +4,7 @@
 .about-links {
   display: block;
   margin-left: auto;
-  margin-right: auto
+  margin-right: auto;
 }
 
 .about-names {
@@ -180,6 +180,11 @@ label.control-label.string.optional {
   font-size: 67px;
   color: white;
   padding: 0px 20px;
+}
+
+.new-game-btn {
+  margin-left: auto;
+  margin-right: auto;
 }
 
 .player {
