--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -53,7 +53,7 @@
     </div>
 
     <div id="footer">
-      <div class="container">
+      <div>
         <ul class="float-right">
           <li class="nav-item">
             <%= link_to 'About', about_path, class: 'nav-link' %>
