--- a/app/assets/stylesheets/master.scss
+++ b/app/assets/stylesheets/master.scss
@@ -62,6 +62,18 @@
   text-shadow: rgba(0, 0, 0, 0.10) 1px 1px;
 }
 
+.btn-newgame {
+  color: white;
+  background-color: #000000;
+  border-color: gray;
+  border-radius: 0.1rem;
+  text-shadow: rgba(0, 0, 0, 0.10) 1px 1px;
+  margin: 30px;
+  font-size: 35px;
+  font-weight: 600;
+  box-shadow: 0px 1px 3px #2a2a2a;
+}
+
 .btn-warning {
   color: white;
   background-color: #000000;
@@ -145,6 +157,12 @@ label.control-label.string.optional {
   font-size: 20px;
 }
 
+.matches {
+  flex-wrap: wrap;
+  padding: 15px;
+  justify-content: center;
+}
+
 .navbar {
   font-family: 'didonesque-roman';
   font-size: 20px;
@@ -182,11 +200,6 @@ label.control-label.string.optional {
   padding: 0px 20px;
 }
 
-.new-game-btn {
-  margin-left: auto;
-  margin-right: auto;
-}
-
 .player {
   margin: 10px 30px;
   border: 2px solid gray;
@@ -195,6 +208,17 @@ label.control-label.string.optional {
 .player-button {
   align-items: center;
   margin: 0px 50px;
+}
+
+.section {
+  background-color: #fff;
+  border: 2px solid;
+  border-radius: 10px;
+  border-color: #e4e4e4 #bebebd #bebebd #e4e4e4;
+  margin-top: 20px;
+  margin-bottom: 20px;
+  padding: 15px 20px 0px;
+  min-width: 300px;
 }
 
 ul {
@@ -234,8 +258,6 @@ ul {
   border: 1px solid #ccc;
   border-radius: 10px;
   border-color: #e4e4e4 #bebebd #bebebd #e4e4e4;
-  margin-top: 20px;
-  margin-bottom: 20px;
+  margin: 10px;
   padding: 20px 30px;
-
 }
