--- a/app/views/games/show.html.erb
+++ b/app/views/games/show.html.erb
@@ -48,16 +48,20 @@
         </div> 
       </div>
       
-      <% @messages.each do |message| %>
-        <div class = "message-box">
-          <p><%= message.body %></p>    
-        </div>
-        
-      <% end %>
+      <div class = "all-messages">
+        <% @messages.each do |message| %>
+          <div class = "message-box">
+            <!-- NOTE: For now, I've left out the user email, as I can't think how to get this from Firebase. Would have to store everything on firebase -->
+            <!-- <p class = "text-muted"><%= message.user.email %></p> -->
+            <p><%= message.body %></p>    
+          </div>
+          
+        <% end %>
+      </div>
 
       <%= simple_form_for @message, url: game_messages_path(@game) do |f| %>
-        <%= f.input :body %>
-        <%= f.submit "Send", class: "btn btn-primary" %>
+        <%= f.input :body, class: "enter-message-box", prompt: "Enter your message" %>
+        <%= f.submit "Send", class: "btn btn-primary submit-message", remote: true %>
       <% end %>
 
       <% if @game.users.count > 1 %>
@@ -99,13 +103,17 @@
     var lastId = ids[ids.length - 1];
     var lastMessage = values[lastId];
     if(lastMessagePageShown.id < lastMessage.id) {
-      location.reload();
+      $('.all-messages').append("<div class = 'message-box'><p>" + lastMessage.body +"</p></div>")
     }
   }); 
 </script>
 
 <script>
   $( function() {
+    $(".submit-message").click(function() {
+      $(".enter-message-box").text("Enter your message");
+    });
+
     //Ultimately, we'll have to assign droppable square based on piece rules and position of other pieces
     $("td").addClass("droppable-square");
     $( ".selectable-piece" ).draggable({
