--- a/app/views/games/index.html.erb
+++ b/app/views/games/index.html.erb
@@ -39,6 +39,7 @@
           <% @started_games.each do |game| %>
             <div class="indexgame">
               <%= link_to game_path(game) %>
+              <%= link_to "Delete", game_path(game), :method => :delete, :class => "btn btn-danger", :data => {:confirm => "Are you sure you want to delete this game?"} %>
             </div>          
           <% end %>
         <% else %>
