--- a/app/views/games/show.html.erb
+++ b/app/views/games/show.html.erb
@@ -112,3 +112,31 @@
       <% end %>
     </div>
   </div>
+
+  <% if @piece.pawn_promotion?(new_y_coord) %>
+    <!-- Modal -->
+    <div class="modal fade" id="myModal" tabindex="-1" role="dialog" aria-labelledby="myModalLabel" aria-hidden="true">
+      <div class="modal-dialog" role="document">
+        <div class="modal-content">
+          <div class="modal-header">
+            <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+              <span aria-hidden="true">×</span>
+            </button>
+            <h3 class="modal-title" id="myModalLabel">You've Been Promoted!</h3>
+          </div>
+          <div class="modal-body">
+            <h5> Choose the piece to be promoted to: </h5>
+              <br />
+              <%= simple_form_for @pieces do |f| %>
+                <%= f.submit "", :type => :image, :src => image_path("blackQueen.png"), class: "player-button" %>  
+                <%= f.submit "", :type => :image, :src => image_path("blackBishop.png"), class: "player-button" %>
+                <%= f.submit "", :type => :image, :src => image_path("blackKnight.png"), class: "player-button" %>
+                <%= f.submit "", :type => :image, :src => image_path("blackRook.png"), class: "player-button" %>
+              <% end %>
+          </div>
+        </div>
+      </div>
+    </div>
+  <% end %>  
+
+</div>
