--- a/app/views/games/show.html.erb
+++ b/app/views/games/show.html.erb
@@ -113,7 +113,7 @@
     </div>
   </div>
 
-  <% if @piece.pawn_promotion?(new_y_coord) %>
+  <% if @piece.pawn_promotion?(y_coord) %>
     <!-- Modal -->
     <div class="modal fade" id="myModal" tabindex="-1" role="dialog" aria-labelledby="myModalLabel" aria-hidden="true">
       <div class="modal-dialog" role="document">
