--- a/app/assets/stylesheets/master.scss
+++ b/app/assets/stylesheets/master.scss
@@ -62,14 +62,6 @@
   text-shadow: rgba(0, 0, 0, 0.10) 1px 1px;
 }
 
-.btn-chat {
-  color: white;
-  background-color: #000000;
-  border-color: gray;
-  border-radius: 3px;
-  text-shadow: rgba(0, 0, 0, 0.10) 1px 1px;
-}
-
 .btn-newgame {
   color: white;
   background-color: #000000;
@@ -94,7 +86,7 @@
   box-shadow: 0px 1px 3px #2a2a2a;
 }
 
-.btn-black:hover, .btn-chat:hover, .btn-warning:hover {
+.btn-black:hover, .btn-warning:hover {
   background-color: #595959;
   color: white;
   border-color: white;
@@ -281,5 +273,4 @@ ul {
   margin-top: 5px;
   margin-bottom: 5px;
   padding: 5px 5px;
-  width: 300px; 
 }
