--- a/app/assets/stylesheets/master.scss
+++ b/app/assets/stylesheets/master.scss
@@ -274,12 +274,11 @@ ul {
   -moz-box-shadow: 1px 1px 2px 0 #d0d0d0;
   -webkit-box-shadow: 1px 1px 2px 0 #d0d0d0;
   box-shadow: 1px 1px 2px 0 #d0d0d0;
-  background: #fff;
+  background: rgba(153, 153, 153, 0.05);
   border: 1px solid #ccc;
   border-radius: 10px;
   border-color: #e4e4e4 #bebebd #bebebd #e4e4e4;
-  margin-top: 5px;
-  margin-bottom: 5px;
+  margin: 5px 0px;
   padding: 5px 5px;
   width: 300px; 
 }
