--- a/app/views/games/index.html.erb
+++ b/app/views/games/index.html.erb
@@ -9,7 +9,7 @@
           <% if @unmatched_games.any? %>
             <% @unmatched_games.each do |game| %>
               <div class="indexgame">
-                <h5 class="text-center"><%= link_to game.name, game_path(game) %></h5>
+                <h4><%= "Game No. #{game.id}" %></h4>
                   <% if game.white_player_user_id.blank? %>
                     <%= simple_form_for game, url: join_game_path(game) do |f| %>
                       <%= f.input :white_player_user_id, as: :hidden, :input_html => { :value => current_user.id } %>
@@ -38,9 +38,20 @@
         <% if @started_games.any? %>
           <% @started_games.each do |game| %>
             <div class="indexgame">
-              <%= link_to game_path(game) %>
+              <h4><%= "Game No. #{game.id}" %></h4>
+              
+              <% if current_user && (current_user.id == game.white_player_user_id || current_user.id == game.black_player_user_id) %>
+                <% if game.turn_user_id == current_user.id %>
+                  <%= link_to 'Your Turn!', game_path(game, id: game.id), :class => 'btn btn-success btn-large join-game-link' %>
+                <% else %>
+                  <%= link_to "Your Opponent's Turn", game_path(game, id: game.id), :class => 'btn btn-info btn-large join-game-link' %>
+                <% end %>
+              <% else %>
+                <%= link_to 'Watch Game', game_path(game, id: game.id), :class => 'btn btn-success btn-large join-game-link' %>
+              <% end %>
               <%= link_to "Delete", game_path(game), :method => :delete, :class => "btn btn-danger", :data => {:confirm => "Are you sure you want to delete this game?"} %>
             </div>
+
           <% end %>
         <% else %>
           <h3 class="text-center">No games in play :(</h3>
