--- a/app/assets/stylesheets/master.scss
+++ b/app/assets/stylesheets/master.scss
@@ -282,3 +282,17 @@ ul {
   padding: 5px 5px;
   width: 300px; 
 }
+
+.game-list {
+  text-align: left;
+  margin-top: 1em;
+  display: inline;
+}
+
+.game-list li {
+  display: inline;
+  float: left;
+  padding-bottom: 5px;
+
+}
+
