--- a/app/views/games/index.html.erb
+++ b/app/views/games/index.html.erb
@@ -16,6 +16,7 @@
                       <%= f.input :turn_user_id, as: :hidden, :input_html => { :value => current_user.id } %>
                       <li><%= f.submit "Join as white player", class: "float right btn btn-secondary btn-sm" %></li>
                     <% end %>
+                    <li><h5><%= "Opponent: #{game.black_player.email}" %></h5></li>
                     <% if current_user.id == game.black_player_user_id %>
                       <li><%= link_to "Delete", game_path(game), :method => :delete, :class => "btn btn-danger btn-sm", :data => {:confirm => "Are you sure you want to delete this game?"} %></li>
                     <% end %>
@@ -24,8 +25,9 @@
                       <%= f.input :black_player_user_id, as: :hidden, :input_html => { :value => current_user.id } %>
                       <li><%= f.submit "Join as black player", class: "btn btn-inverse btn-sm" %></li>
                     <% end %>
+                    <li><h5><%= "Opponent: #{game.white_player.email}" %></h5></li>
                     <% if current_user.id == game.white_player_user_id %>
-                      <li><%= link_to "Delete", game_path(game), :method => :delete, :class => "btn btn-danger btn-sm", :data => {:confirm => "Are you sure you want to delete this game?"} %></li>
+                      <%= link_to "Delete", game_path(game), :method => :delete, :class => "btn btn-danger btn-sm", :data => {:confirm => "Are you sure you want to delete this game?"} %>
                     <% end %>
                   <% end %>
               </div>
@@ -52,10 +54,15 @@
                 <% else %>
                   <li><%= link_to "Your Opponent's Turn", game_path(game, id: game.id), :class => 'btn btn-info btn-sm join-game-link' %></li>
                 <% end %>
+                <% if current_user.id == game.white_player_user_id %>
+                  <li><h5><%= "Opponent: #{game.black_player.email}" %></h5></li>
+                <% else %>
+                  <li><h5><%= "Opponent: #{game.white_player.email}" %></h5></li>
+                <% end %>
               <% else %>
                 <li><%= link_to 'Watch Game', game_path(game, id: game.id), :class => 'btn btn-success btn-sm join-game-link' %></li>
               <% end %>
-              <%= link_to "Delete", game_path(game), :method => :delete, :class => "btn btn-danger btn-sm", :data => {:confirm => "Are you sure you want to delete this game?"} %></li>
+              <%= link_to "Delete", game_path(game), :method => :delete, :class => "btn btn-danger btn-sm", :data => {:confirm => "Are you sure you want to delete this game?"} %>
             </div>
           <% end %>
         <% else %>
