add responsiveness for mobile

--- a/app/assets/stylesheets/games.scss
+++ b/app/assets/stylesheets/games.scss
@@ -66,54 +66,26 @@ td {
   background: white;
 }
 
-/* --- Chess Pieces --- */
+@media (max-width: 800px) {
+  td {
+    width: 50px;
+    height: 50px;
+  }
 
-#King {
-  background-image: image_url('King_white.png');
-  height: 75px;
-  width: 75px;
-  display:block;
+  img {
+    width: 45px;
+    height: 45px;
+  }
 }
 
-#Queen {
-  background-image: image_url('Queen_white.png');
-  height: 80px;
-  width: 80px;
-  display:block;
-}
+@media (max-width: 600px) {
+  td {
+    width: 40px;
+    height: 40px;
+  }
 
-#Bishop {
-  background-image: image_url('Bishop_black.png');
-  height: 80px;
-  width: 80px;
-  display:block;
+  img {
+    width: 35px;
+    height: 35px;
+  }
 }
-
-#Knight {
-  background-image: image_url('Knight_black.png');
-  height: 80px;
-  width: 80px;
-  display:block;
-}
-
-#Rook {
-  background-image: image_url('Rook_black.png');
-  height: 80px;
-  width: 80px;
-  display:block;
-}
-
-#Pawn {
-  background-image: image_url('Pawn_white.png');
-  height: 80px;
-  width: 80px;
-  display:block;
-}
-
-.piece_cap {
-  width: 70px;
-  height: 70px;
-  opacity: 1;
-}
-
-/* ------------------------ */
