--- a/app/views/games/show.html.erb
+++ b/app/views/games/show.html.erb
@@ -1,6 +1,6 @@
 <div class="background">
   <div class="row">
-    <div class="column">
+    <div class="column leftside">
       <div class="booyah-box chatbox">
         <% @messages.each do |message| %>
           <div class = "message-box">
@@ -40,7 +40,7 @@
       </table>
     </div>
 
-    <div class="column">
+    <div class="column rightside">
       <div class="booyah-box captured-pieces">
 
         <div class="captured-box">
