--- a/app/assets/stylesheets/master.scss
+++ b/app/assets/stylesheets/master.scss
@@ -178,11 +178,6 @@ label.control-label.string.optional {
   background: image_url('gun_metal.png');
 }
 
-.navbar-brand {
-  font-size: 25px;
-  font-weight: 700;
-}
-
 .navbar-inverse .navbar-brand:hover {
   color: lightgray;
 }
@@ -201,9 +196,10 @@ label.control-label.string.optional {
   color: lightgray;
 }
 
-.navbar-inverse .navbar-brand, .navbar-inverse .navbar-toggler {
+.navbar-inverse .navbar-brand {
   font-family: 'didonesque-roman';
   font-size: 67px;
+  font-weight: 700;
   color: white;
   padding: 0px 20px;
 }
@@ -281,4 +277,12 @@ ul {
   margin: 5px 0px;
   padding: 5px 5px;
   width: 300px; 
+}
+
+@media (max-width: 600px) {
+  .navbar-inverse .navbar-brand {
+    font-size: 40px;
+    line-height: .7em;
+    margin-top: 20px;
+  }
 }
