--- a/app/views/static_pages/about.html.erb
+++ b/app/views/static_pages/about.html.erb
@@ -96,7 +96,7 @@
     </div>
   </div>
 
-  <div class="booyah-box col-10 offset-1">
+  <div class="booyah-box col-10 offset-1 tools">
     <h5 class="text-center about-tools">Chess Space was built utilizing the following languages and tools: </h5>
     <br />
     <div class="icons">
