--- a/app/assets/stylesheets/games.scss
+++ b/app/assets/stylesheets/games.scss
@@ -103,13 +103,25 @@ td {
     margin-left: auto; 
     margin-right: auto;
   }
+  .booyah-box.chatbox {
+    width: 350px;
+    height: auto;
+    padding: 5px;
+  }
   .leftside {
     display: flex; 
     order: 2; 
     justify-content: space-between;
   }
+  .move-history {
+    display: none;
+  }
   .rightside { 
     display: none; 
+  }
+  textarea#message_body {
+    width: 330px;
+    margin-left: 5px;
   }
   td {
     width: 40px;
