--- a/app/assets/stylesheets/master.scss
+++ b/app/assets/stylesheets/master.scss
@@ -279,10 +279,40 @@ ul {
   width: 300px; 
 }
 
+@media (max-width: 1024px) and (min-width:600px) {
+  .btn-warning {
+    margin-left: auto;
+    margin-right: auto;
+  }
+  .section {
+    margin-left: auto;
+    margin-right: auto;
+    min-width: 0;
+  }
+}
+
 @media (max-width: 600px) {
+  .btn-warning {
+    margin: 15px auto;
+    font-size: 25px;
+    white-space: normal;
+  }
+  .col-6 {
+    max-width: 75%
+  }
+  input.player-button {
+    margin: 0px 65px;
+  }
   .navbar-inverse .navbar-brand {
     font-size: 40px;
     line-height: .7em;
     margin-top: 20px;
+  }
+  .offset-3 {
+    margin-left: auto;
+    margin-right: auto;
+  }
+  .tools {
+    display: none;
   }
 }
